# bluez-dubbing

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile
OneDrive/Desktop/bluez-dubbing-modal-main/apps/backend/services/asr/: pyproject.toml
OneDrive/Desktop/bluez-dubbing-modal-main/apps/backend/services/asr/models/whisperxModel/: runner_0.py
apps/backend/libs/common-schemas/common_schemas/: models.py
apps/backend/services/asr/models/whisperxModel/: runner_0.py  runner_1.py
apps/backend/services/orchestrator/app/: main.py
apps/backend/services/orchestrator/media_processing/: audio_processing.py
apps/backend/services/tts/models/chatterboxModel/: pyproject.toml  runner.py
apps/frontend/scripts/modules/: reviews.js
apps/frontend/styles/: main.css
