[project]
name = "chatterboxmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "chatterbox-tts",
    "common-schemas"
]

[tool.uv.sources]
common-schemas = { path = "../../../../libs/common-schemas" , editable = true}

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[tool.uv]
override-dependencies = ["torch>=2.6.0,<=2.8.0", "torchaudio>=2.6.0,<=2.8.0"]

